--- a/LatexTFG/Apendices/03ApendiceC.tex
+++ b/LatexTFG/Apendices/03ApendiceC.tex
@@ -70,6 +70,7 @@ Las tareas que ha desarrollado exitosamente han sido las siguientes:
 \item Realización de pruebas sobre la configuración de pines GPIO desde C.
 \item Aprendizaje y uso de la herramienta software de análisis lógico Saleae.
 \item Asistencia y colaboración a las reuniones que se han realizado con el director del proyecto.
+\item Desarrollo del DTO utilizado en la BBB.
 \item Desarrollo, depuración y pruebas del código ensamblador desarrollado específicamente para el PRU.
 \item Realización de modificaciones y ampliaciones sobre el programa en C original.
 \item Desarrollo del programa en C encargado de leer infomación de memoria y volcarla a fichero.
@@ -110,6 +111,7 @@ Las tareas que ha desarrollado exitosamente han sido las siguientes:
 \item Realización de pruebas sobre la configuración de pines GPIO desde bash.
 \item Aprendizaje y uso de la herramienta software de análisis lógico Saleae.
 \item Asistencia y colaboración a las reuniones que se han realizado con el director del proyecto.
+\item Desarrollo del DTO utilizado en la BBB.
 \item Realización de depuración, documentación y testeo del código ensamblador encargado de la comunicación SPI.
 \item Realización de pruebas sobre el programa original desarrollado en C.
 \item Desarrollo y depuración de la interacción de la interacción del PRU con el resto del ecosistema, concretamente con los bancos de memoria que ofrece la BBB.
