--- a/LatexTFG/Capitulos/05Capitulo5.tex
+++ b/LatexTFG/Capitulos/05Capitulo5.tex
@@ -49,7 +49,23 @@ En definitiva, gracias a la realización de este trabajo, nos ha sido posible ade
 %-------------------------------------------------------------------
 \label{cap5:sec:conclusions}
 
-Aquí van las conclusiones en inglés.
+The work presented here is framed within the field of medicine. Within this wide field, we can find all kinds of solutions and applications that try to make life easier for people. The present project tries to be one of these solutions.
+
+During the development of the project, the following tasks have been successfully performed:
+
+\begin{itemize}
+\item Real-time data collection of 8-channel ECG sensor at a frequency of 1KHz.
+\item Bluetooth storage and transmission of the samples, by the BBB.
+\item Bluetooth reception and display of data using an Android application.
+\item Treatment of the signal in the Android application, and use of a delineation algorithm in order to detect the PPM.
+\item Sending data to a server through an internet connection.
+\item Sending data from a server to multiple devices, over the internet.
+\item Data presentation and signaling of significant events in medical monitoring devices.
+\end{itemize}
+
+Among the possible real uses that could result for this project in the future, we can highlight its use in hospitals, patients with reduced mobility who can not go to the hospital, and even older people at high risk of suffering heart diseases in order to prevent and treat them early.
+
+Thanks to the accomplishment of this work, we have been able to enter into the field of medicine. We consider that everything related to medicine is an exciting event, since any progress or improvement that is developed, no matter how small or simple it is, is capable of potentially improving the quality of life of many people. Precisely for this reason, we have been working so hard on this project.
 
 
 %\medskip
