--- a/LatexTFG/Cascaras/fin.tex
+++ b/LatexTFG/Cascaras/fin.tex
@@ -49,41 +49,28 @@
 
 \small
 
-\hfill \emph{--¿Qué te parece desto, Sancho? -- Dijo Don Quijote --}
+\hfill \emph{}
 
-\hfill \emph{Bien podrán los encantadores quitarme la ventura,}
+\hfill \emph{}
 
-\hfill \emph{pero el esfuerzo y el ánimo, será imposible.}
+\hfill \emph{}
 
 \hfill 
 
-\hfill \emph{Segunda parte del Ingenioso Caballero} 
+\hfill \emph{} 
 
-\hfill \emph{Don Quijote de la Mancha}
+\hfill \emph{}
 
-\hfill \emph{Miguel de Cervantes}
+\hfill \emph{}
 
 \vfill%space*{4cm}
 
-\hfill \emph{--Buena está -- dijo Sancho --; fírmela vuestra merced.}
-
-\hfill \emph{--No es menester firmarla -- dijo Don Quijote--,}
-
-\hfill \emph{sino solamente poner mi rúbrica.}
-
-\hfill 
-
-\hfill \emph{Primera parte del Ingenioso Caballero} 
-
-\hfill \emph{Don Quijote de la Mancha}
-
-\hfill \emph{Miguel de Cervantes}
 
 
-\newpage
-\thispagestyle{empty}\mbox{}
+%\newpage
+%\thispagestyle{empty}\mbox{}
 
-\newpage
+%\newpage
 
 % Variable local para emacs, para  que encuentre el fichero maestro de
 % compilación y funcionen mejor algunas teclas rápidas de AucTeX
