--- a/LatexTFG/Cascaras/resumen.tex
+++ b/LatexTFG/Cascaras/resumen.tex
@@ -16,7 +16,7 @@
 \begin{FraseCelebre}
 \begin{Frase}
 Encuéntrate y sé tú mismo; \\
-recuerda que no hay nadie como tú
+recuerda que no hay nadie como tú.
 \end{Frase}
 \begin{Fuente}
 Dale Carnegie
