--- a/LatexTFG/Tesis.tex
+++ b/LatexTFG/Tesis.tex
@@ -85,6 +85,8 @@ constantes,guionado,Cascaras/bibliografia,config%
 
 \usepackage{listings}
 
+\usepackage[]{algorithm2e}
+
 \lstdefinestyle{customc}{
   belowcaptionskip=1\baselineskip,
   breaklines=true,
